# TheLauncher

./: .gitignore  LICENSE  README-zh.md  README.md  THIRDPARTY  TheLauncher.sln  build.ps1  build.sh
.github/workflows/: build.yml  windows.yml
src/HCGStudio.QuickLauncher/: App.xaml  App.xaml.cs  EmptyWindow.xaml  EmptyWindow.xaml.cs  HCGStudio.QuickLauncher.csproj  LoginViewModel.cs  LoginWindow.xaml  LoginWindow.xaml.cs
src/HCGStudio.TheLauncher/: HCGStudio.TheLauncher.csproj  Program.cs  Settings.cs  TheLauncher.cs
src/HCGStudio.TheLauncherLib/: HCGStudio.TheLauncherLib.csproj
src/HCGStudio.TheLauncherLib/Download/: FileDownloader.cs
src/HCGStudio.TheLauncherLib/GameFile/: IArgProvider.cs  JvmArgProvider.cs  JvmGcOption.cs  JvmOption.cs  MinecraftArgBuilder.cs  MinecraftAsset.cs  MinecraftGame.cs  MinecraftLib.cs  MinecraftRule.cs  MinecraftVersionMeta.cs
src/HCGStudio.TheLauncherLib/Installer/: IInstaller.cs  MinecraftInstaller.cs
src/HCGStudio.TheLauncherLib/Login/: AuthenticationException.cs  IAuthenticator.cs  MicrosoftAuthenticator.cs  OfflineAuthenticator.cs  OldAuthenticator.cs  RemoteError.cs
src/HCGStudio.TheLauncherLib/StartUp/: Launcher.cs
src/HCGStudio.TheLauncherLib/Tools/: HttpSingleton.cs  JavaDetector.cs  JavaInfo.cs  SymbolicLink.cs
src/HCGStudio.TheLauncherLogin/: App.xaml  App.xaml.cs  HCGStudio.TheLauncherLogin.csproj  MainWindow.xaml  MainWindow.xaml.cs  packages.config
src/HCGStudio.TheLauncherLogin/Properties/: AssemblyInfo.cs  Resources.Designer.cs  (+1 more)
src/HCGStudio.TheLauncherLoginGtk/: CMakeLists.txt  main.cpp
